--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.18",
+    "npx": "^10.2.2",
     "postcss": "^8.4.35",
+    "svelte-preprocess": "^5.1.3",
     "tailwindcss": "^3.4.1"
   }
 }
