--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.5.4",
+    "@zeit/next-css": "^1.0.1",
+    "next": "^14.1.3",
     "react": "^18",
     "react-dom": "^18"
   },
